update StoreSwipeController.php to return if swipe is a match
