# app/Http/Controllers/StoreSwipeController.php
@@ -11,16 +11,21 @@ class StoreSwipeController extends Controller
     /**
      * Store Swipe
      *
-     * Stores a swipe for the authenticated user.
+     * Stores a swipe for the authenticated user. Returns the swipe as an object and a match key to indicate if
+     * the swipe resulted in a match.
      *
-     * @bodyParam swipee_id string required The ID of the user being swiped on.
-     * @bodyParam direction string required The direction of the swipe (left or right).
+     * @bodyParam swipee_id string required The ID of the user being swiped on. Example: 08e1608c-eb31-4623-bde6-b63646daecf9
+     * @bodyParam direction string required The direction of the swipe (left or right). Example: right
      *
-     * @response 201 {
-     * "id": 1,
-     * "swipee_id": "08e1608c-eb31-4623-bde6-b63646daecf9",
-     * "swiper_id": "98cca5ca-ca31-4031-a41b-241dc0876d5f",
-     * "direction": "right"
+     * @responseStatus 201
+     * @response {
+     *     "swipe": {
+     *         "id": "12345",
+     *         "swipee_id": "08e1608c-eb31-4623-bde6-b63646daecf9",
+     *         "direction": "right",
+     *         "created_at": "2023-10-01T12:00:00Z",
+     *     },
+     *    "match": true
      * }
      */
     public function __invoke(Request $request): JsonResponse
@@ -37,6 +42,9 @@ class StoreSwipeController extends Controller
                 'direction' => $request->direction,
             ]);
 
-        return response()->json($swipe, Response::HTTP_CREATED);
+        return response()->json([
+            'swipe' => $swipe->toArray(),
+            'match' => $swipe->isMatch(),
+        ], Response::HTTP_CREATED);
     }
 }
