# app/Models/Swipe.php
@@ -14,6 +14,15 @@ class Swipe extends Model
 
     protected $guarded = [];
 
+    public function isMatch(): bool
+    {
+        return Swipe::query()
+            ->where('swiper_id', $this->swipee->getKey())
+            ->where('swipee_id', $this->swiper->getKey())
+            ->where('direction', 'right')
+            ->exists();
+    }
+
     public function swiper(): BelongsTo
     {
         return $this->belongsTo(User::class, 'swiper_id');
